# falcondeck

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  deploy.sh  package-lock.json  package.json  skills-lock.json
.github/workflows/: release-desktop.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/scripts/: stop-dev-daemon.mjs
apps/desktop/src/: App.css  App.tsx  api.ts  app-utils.test.ts  app-utils.ts  client-core.test.ts  index.css  main.tsx  store.test.ts  store.ts  types.ts  utils.test.ts  utils.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ApprovalBar.tsx  ContextPanel.tsx  DesktopConversationPane.tsx  DesktopShell.tsx  DiffPanel.tsx  InteractiveRequestBar.tsx  NewThreadState.tsx  ProjectImportOverlay.tsx  PromptInput.test.tsx  RemotePairingPopover.test.tsx  RemotePairingPopover.tsx  SessionHeader.tsx  SettingsView.tsx  Sidebar.test.tsx  Sidebar.tsx
apps/desktop/src/components/diff/: DiffView.tsx  FileListView.tsx  diff-utils.ts
apps/desktop/src/components/settings/: GeneralSettingsPanel.tsx  PreferenceToggle.tsx  RemoteAccessPanel.test.tsx  RemoteAccessPanel.tsx  SettingsSidebar.tsx  settings-utils.test.ts  settings-utils.ts
apps/desktop/src/hooks/: useAppUpdater.ts  useDaemonConnection.ts  useGitDiff.ts  useGitStatus.ts  useShiki.ts
apps/mobile/: app.config.ts  app.json  eas.json  metro.config.js  package.json  tsconfig.json  vitest.config.ts
apps/mobile/plugins/: withLibz.js
apps/mobile/src/: entry.ts
apps/mobile/src/app/: _layout.tsx  index.tsx
apps/mobile/src/crypto/: crypto.test.ts  index.test.ts  index.ts  polyfill.ts
apps/mobile/src/hooks/: hooks-coverage.test.ts  useInterruptTurn.test.tsx  useInterruptTurn.ts  useRelayConnection.test.ts  useRelayConnection.ts  useRenderBlocks.test.tsx  useRenderBlocks.ts  useScrollToBottom.test.tsx  useScrollToBottom.ts  useSessionActions.test.ts  useSessionActions.ts  useThreadActions.ts
apps/mobile/src/storage/: mmkv.test.ts  mmkv.ts  mobile-session-cache.ts  secure.test.ts  secure.ts
apps/mobile/src/store/: index.test.ts  index.ts  relay-store-crypto.test.ts  relay-store-edges.test.ts  relay-store.test.ts  relay-store.ts  session-store-edges.test.ts  session-store.test.ts  session-store.ts  ui-store.test.ts  ui-store.ts
apps/mobile/src/test/: factories.test.ts  factories.ts  mock-types.d.ts  render.tsx  screens.test.tsx
apps/mobile/src/theme/: tokens.ts  unistyles.ts
apps/remote-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/remote-web/public/: site.webmanifest
apps/remote-web/src/: App.tsx  main.tsx  styles.css  types.ts
apps/remote-web/src/components/: ContextPanel.tsx  PairingFlow.tsx  RemoteConnectionHelpCard.tsx  RemotePairingScreen.tsx  RemotePreferencesModal.tsx  Sidebar.tsx
apps/remote-web/src/lib/: remoteAppUtils.ts
apps/site/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/site/public/: site.webmanifest
apps/site/src/: App.tsx  main.tsx  styles.css
crates/falcondeck-core/: Cargo.toml
crates/falcondeck-core/src/: crypto.rs  lib.rs
crates/falcondeck-daemon/: Cargo.toml
crates/falcondeck-daemon/src/: agent_binary.rs  api.rs  app.rs  claude.rs  codex.rs  error.rs  git.rs  lib.rs  main.rs  skills.rs
crates/falcondeck-daemon/src/app/: agent_helpers.rs  conversation_helpers.rs  notifications.rs  remote_bridge.rs  storage.rs  threads.rs  workspace_ops.rs
crates/falcondeck-daemon/src/codex/: session_file.rs  thread_list.rs
crates/falcondeck-daemon/tests/: http_api.rs
crates/falcondeck-relay/: Cargo.toml
crates/falcondeck-relay/src/: api.rs  app.rs  error.rs  lib.rs  main.rs  persistence.rs
crates/falcondeck-relay/tests/: relay_api.rs
docs/: 00-architecture-overview.md  01-competitive-landscape.md  02-agent-integration-paths.md  03-mobile-sync-architectures.md  04-desktop-framework-analysis.md  05-happy-claude-vs-codex.md  06-architecture-decisions.md  07-codex-app-server-protocol.md  08-open-questions.md  09-ui-design-decisions.md  10-repo-layout.md  11-deployment-ops.md  12-ui-handoff.md  13-desktop-updates.md  14-mobile-app.md
ops/ansible/: README.md  ansible.cfg
ops/ansible/group_vars/: all.example.yml
ops/ansible/inventory/example/: hosts.yml
ops/ansible/playbooks/: bootstrap.yml  relay.yml
scripts/: generate-brand-assets.mjs  prepare-desktop-release.mjs
(+92 files in other folders)
