[workspace]
members = [
  "crates/falcondeck-core",
  "crates/falcondeck-daemon",
  "crates/falcondeck-relay",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.lints.rust]

[workspace.lints.clippy]

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
