[package]
name = "falcondeck-core"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono.workspace = true
crypto_box = "0.9.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.5"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
