[package]
name = "falcondeck-relay"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
falcondeck-core = { path = "../falcondeck-core" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3.23.0"
tokio-tungstenite = "0.28.0"
