[package]
name = "falcondeck-desktop"
version.workspace = true
edition = "2021"

[lib]
name = "falcondeck_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.4.0", features = [] }

[dependencies]
falcondeck-core = { path = "../../../crates/falcondeck-core" }
falcondeck-daemon = { path = "../../../crates/falcondeck-daemon" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "=2.8.3", features = [] }
tauri-plugin-dialog = "=2.4.0"
tauri-plugin-updater = "=2.9.0"
tokio.workspace = true

[features]
custom-protocol = ["tauri/custom-protocol"]
